# python-project-49

./: .gitignore  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py
brain_games/scripts/: brain_games.py
brain_games1/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games1/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
