[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Даниил Кочнев <oldafovich@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games1" },
]

[tool.poetry.scripts]
brain-games = "brain_games1.scripts.brain_games:main"
brain-even = "brain_games1.scripts.brain_even:main"
brain-calc = "brain_games1.scripts.brain_calc:main"

[tool.poetry.dependencies]
python = "^3.8.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
